# bcsat

./: .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt  bc.cc  bc.hh  bc2cnf.cc  bc2edimacs.cc  bc2iscas89.cc  bcminisat.cc  bcminisat_solve.cc  bczchaff.cc  bczchaff_solve.cc  defs.cc  defs.hh  edimacs2bc.cc  gate.cc  gate.hh  lexer.lex
minisat/: CMakeLists.txt
minisat-2.2.0/minisat/core/: SolverTypes.h
minisat/minisat/mtl/: Alloc.h  IntTypes.h
minisat/minisat/utils/: Options.h
zchaff.2008.10.12/: CMakeLists.txt
